# crypto-wallet

./: .gitignore  .npmrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vercel.json
.github/workflows/: build-mobile.yml  deploy-web.yml  release-desktop.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: app.json  metro.config.js  package.json
apps/mobile/app/: _layout.tsx  dashboard.tsx  index.tsx  receive.tsx  setup.tsx  unlock.tsx
apps/mobile/src/: polyfills.ts
apps/mobile/src/lib/: adapters.ts
apps/web/: .env.local.example  next.config.js  package.json  supabase-migration.sql  tsconfig.json  vercel.json
apps/web/public/: manifest.json  sw.js
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/txlist/: route.ts
apps/web/src/app/auth/callback/: page.tsx
apps/web/src/components/: CloudBackupPrompt.tsx  CloudRestoreScreen.tsx  ServiceWorkerRegistrar.tsx  WalletApp.tsx  WalletProvider.tsx
apps/web/src/lib/: adapters.ts  supabase.ts  walletCloud.ts
