[package]
name = "crypto-wallet"
version = "0.0.1"
description = "Crypto Wallet — your keys, your coins"
authors = ["you"]
edition = "2021"

[lib]
name = "wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
